--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Your Name
 description: Summer 2020 DREU Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/headshot.png
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/headshot.jpg
 
 #
 # Flags below are optional
@@ -17,10 +17,7 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/he
 
 # Includes an icon in the footer for each username you enter
 footer-links:
-  dribbble:
-  email: yourmail@mail.com
-  facebook:
-  flickr:
+  email: chuckgarcian@mail.com
   rss: # just type anything here for a working RSS icon
 
 # Your website URL (e.g. http://ajstent.github.io)
