--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Your Name
 description: Summer 2020 DREU Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/headshot.jpg
+avatar: https://myname.github.io/images/headshot.jpg
 
 #
 # Flags below are optional
@@ -22,7 +22,7 @@ footer-links:
 
 # Your website URL (e.g. http://ajstent.github.io)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: https://www.cs.utexas.edu/~chuckg/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
