--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Your Name
 description: Summer 2020 DREU Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://chuckGarcian.github.io/images/headshot.jpg
+avatar: https://ChuckGarcian.github.io/images/headshot.jpg
 
 #
 # Flags below are optional
