--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Chuck Garcia
 
 # Short bio or description (displayed in the header)
-description: Summer 2020 DREU Project
+description: Summer 2024 DREU Project
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://ChuckGarcian.github.io/images/headshot.jpg
@@ -21,7 +21,7 @@ avatar: https://ChuckGarcian.github.io/images/headshot.jpg
 
 # Your website URL (e.g. http://ajstent.github.io)
 # Used for Sitemap.xml and your RSS feed
-url: https://www.cs.utexas.edu/~chuckg/
+url: https://chuckgarcian.github.io/
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
