--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,8 @@ name: Chuck Garcia
 # Short bio or description (displayed in the header)
 description: Summer 2024 DREU Project
 
+myurl: www.test.com
+
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://ChuckGarcian.github.io/images/headshot.jpg
 
