Fix issue with article listings html

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-avatar: https://ChuckGarcian.github.io/assets/img/headshot.jpg
-baseurl: 
+# avatar: https://ChuckGarcian.github.io/assets/img/headshot.jpg
+baseurl:  
 title: Chuck Garcia
 description: DREU 2024 
 subtitle:  DREU Project
